[gd_scene load_steps=13 format=3 uid="uid://b5pdi6fx5chy7"]

[ext_resource type="Theme" uid="uid://errgec2364nv" path="res://fonts/Izayoi_Theme_Tooltip.tres" id="1_q35yw"]
[ext_resource type="Script" uid="uid://c6y7k88w2ugfv" path="res://scenes/GUI/info_panel.gd" id="2_3ju1g"]
[ext_resource type="Texture2D" uid="uid://dt8g5xp8171gn" path="res://sprites/UI/ui_status_tray.png" id="3_06ogc"]
[ext_resource type="PackedScene" uid="uid://63n00lxo2oxf" path="res://scenes/GUI/tooltips/item_display_margin.tscn" id="4_gtm1e"]
[ext_resource type="PackedScene" uid="uid://bi4unq8mpucas" path="res://scenes/GUI/tooltips/tooltip_display.tscn" id="9_hgpe6"]

[sub_resource type="Animation" id="Animation_5g3yv"]
resource_name = "Close"
length = 0.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_tween_min_size"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ma7y6"]
resource_name = "Open"
length = 0.3
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_tween_min_size"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1f6fx"]
resource_name = "RESET"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mqi45"]
_data = {
&"Close": SubResource("Animation_5g3yv"),
&"Open": SubResource("Animation_ma7y6"),
&"RESET": SubResource("Animation_1f6fx")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ger1"]
animation = &"Open"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xn1x1"]
animation = &"Close"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_k0a7b"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3ger1")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_xn1x1")
blend_point_1/pos = 1.0

[node name="InfoPanel" type="PanelContainer"]
custom_minimum_size = Vector2(200, 150)
layout_direction = 1
offset_right = 200.0
offset_bottom = 150.0
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("1_q35yw")
script = ExtResource("2_3ju1g")

[node name="BackgroundCenter" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("3_06ogc")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 5
patch_margin_top = 1
patch_margin_right = 5
patch_margin_bottom = 5

[node name="ToolTipContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ToolTipContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="ItemDisplayMargin" parent="ToolTipContainer/VBoxContainer" instance=ExtResource("4_gtm1e")]
layout_mode = 2

[node name="ToolTipDisplay" parent="ToolTipContainer/VBoxContainer" instance=ExtResource("9_hgpe6")]
visible = true
clip_contents = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mqi45")
}

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayer"]
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeBlendSpace1D_k0a7b")
anim_player = NodePath("..")
parameters/blend_position = -1.0
